testsuite/tests/typecheck/should_compile/T15473.stderr

T15473.hs:11:3: error: [GHC-22979]
    • Variable ‘a’ occurs more often
        in the type-family application ‘Undefined’
        than in the LHS of the family instance ‘LetInterleave
                                                  xs t ts is y z’
    • In the equations for closed type family ‘LetInterleave’
      In the type family declaration for ‘LetInterleave’
    Suggested fix:
      Perhaps you intended to use the ‘UndecidableInstances’ extension
